// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ebay-table > renders ColumnSorting 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33maria-sort[39m=[32m"ascending"[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mSeller[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-sort-down-12"[39m
                    [33mviewBox[39m=[32m"0 0 12 12"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33md[39m=[32m"m6.523 10.789 4.27-4.287a.717.717 0 0 0-.003-1.011.71.71 0 0 0-1.007.003L6.729 8.567V1.715A.713.713 0 0 0 6.017 1a.713.713 0 0 0-.711.715v6.852L2.252 5.494a.71.71 0 0 0-1.232.298.716.716 0 0 0 .229.71l4.27 4.287a.71.71 0 0 0 1.004 0Z"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-down-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mItem[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-sort-12"[39m
                    [33mviewBox[39m=[32m"0 0 12 12"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33md[39m=[32m"M2.75 1a.75.75 0 0 1 .75.75v6.527l.69-.775a.75.75 0 1 1 1.12.996L3.32 10.74a.752.752 0 0 1-1.137 0L.188 8.5a.75.75 0 1 1 1.122-.997l.69.774V1.75A.75.75 0 0 1 2.75 1Zm5.06 3.498a.75.75 0 1 1-1.12-.996L8.68 1.26a.752.752 0 0 1 1.137 0L11.81 3.5a.75.75 0 1 1-1.12.997L10 3.723v6.527a.75.75 0 0 1-1.5 0V3.723l-.69.775Z"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mStatus[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mList Price[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mQuantity Available[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mOrders[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mWatchers[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</button>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [36m<button[39m
              [33mtype[39m=[32m"button"[39m
            [36m>[39m
              [0mProtection[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [..."
`;

exports[`ebay-table > renders ColumnSortingWithLink 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33maria-sort[39m=[32m"ascending"[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://www.ebay.com"[39m
            [36m>[39m
              [0mSeller[0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-sort-down-12"[39m
                    [33mviewBox[39m=[32m"0 0 12 12"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33md[39m=[32m"m6.523 10.789 4.27-4.287a.717.717 0 0 0-.003-1.011.71.71 0 0 0-1.007.003L6.729 8.567V1.715A.713.713 0 0 0 6.017 1a.713.713 0 0 0-.711.715v6.852L2.252 5.494a.71.71 0 0 0-1.232.298.716.716 0 0 0 .229.71l4.27 4.287a.71.71 0 0 0 1.004 0Z"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-sort-down-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</a>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mItem[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mStatus[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mList Price[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mQuantity Available[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mOrders[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mWatchers[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mProtection[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mShipping[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mDelivery[0m
          [36m</th>[39m
        [36m</tr>[39m
      [36m</thead>[39m
      [36m<tbody>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo Switch Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$287.96[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m300[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/1 - 4/5[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo SNES Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$89.85[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m45[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m5[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$18.95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX 360 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--time-sensitive"[39m
            [36m>[39m
              [0mBackorder[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m345[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/17 - 4/25[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX One Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--neutral"[39m
            [36m>[39m
              [0mPreparing[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m399[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m305[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$27.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/9 - 4/11[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony Playstation 5 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--trustworthy"[39m
            [36m>[39m
              [0mRestocking[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$519.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m199[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$29.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
      [36m</tbody>[39m
    [36m</table>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-table > renders Default 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSeller[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mItem[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mStatus[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mList Price[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mQuantity Available[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mOrders[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mWatchers[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mProtection[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mShipping[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mDelivery[0m
          [36m</th>[39m
        [36m</tr>[39m
      [36m</thead>[39m
      [36m<tbody>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo Switch Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$287.96[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m300[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/1 - 4/5[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo SNES Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$89.85[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m45[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m5[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$18.95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX 360 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--time-sensitive"[39m
            [36m>[39m
              [0mBackorder[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m345[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/17 - 4/25[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX One Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--neutral"[39m
            [36m>[39m
              [0mPreparing[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m399[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m305[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$27.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/9 - 4/11[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony Playstation 5 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--trustworthy"[39m
            [36m>[39m
              [0mRestocking[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$519.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m199[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$29.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
      [36m</tbody>[39m
    [36m</table>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-table > renders SelectionModeBasic 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table table--mode-selection"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"checkbox"[39m
            [36m>[39m
              [36m<input[39m
                [33maria-checked[39m=[32m"mixed"[39m
                [33maria-label[39m=[32m"Select all"[39m
                [33mclass[39m=[32m"checkbox__control"[39m
                [33mtype[39m=[32m"checkbox"[39m
              [36m/>[39m
              [36m<span[39m
                [33mclass[39m=[32m"checkbox__icon"[39m
                [33mhidden[39m=[32m""[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-checkbox-mixed-18"[39m
                      [33mviewBox[39m=[32m"0 0 18 18"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33mclip-rule[39m=[32m"evenodd"[39m
                        [33md[39m=[32m"M4 0a4 4 0 0 0-4 4v10a4 4 0 0 0 4 4h10a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4H4Zm1 8a1 1 0 1 0 0 2h8a1 1 0 1 0 0-2H5Z"[39m
                        [33mfill-rule[39m=[32m"evenodd"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-checkbox-mixed-18"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</span>[39m
            [36m</span>[39m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSeller[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mItem[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mStatus[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mList Price[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mQuantity Available[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mOrders[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mWatchers[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mProtection[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mShipping[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mDelivery[0m
          [36m</th>[39m
        [36m</tr>[39m
      [36m</thead>[39m
      [36m<tbody>[39m
        [36m<tr>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"checkbox"[39m
            [36m>[39m
              [36m<input[39m
                [33maria-label[39m=[32m"Select row"[39m
                [33mchecked[39m=[32m""[39m
                [33mclass[39m=[32m"checkbox__control"[39m
                [33mtype[39m=[32m"checkbox"[39m
              [36m/>[39m
              [36m<span[39m
                [33mclass[39m=[32m"checkbox__icon"[39m
                [33mhidden[39m=[32m""[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"checkbox__unchecked"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                      [33mviewBox[39m=[32m"0 0 18 18"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
                  [36m/>[39m
                [36m</svg>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"checkbox__checked"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-checkbox-checked-18"[39m
                      [33mviewBox[39m=[32m"0 0 18 18"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 ..."
`;

exports[`ebay-table > renders TableDensity 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table table--density-compact"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSeller[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mItem[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mStatus[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mList Price[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mQuantity Available[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mOrders[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mWatchers[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mProtection[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mShipping[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mDelivery[0m
          [36m</th>[39m
        [36m</tr>[39m
      [36m</thead>[39m
      [36m<tbody>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo Switch Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$287.96[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m300[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/1 - 4/5[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo SNES Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--recent"[39m
            [36m>[39m
              [0mReady to Ship[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$89.85[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m45[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m5[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$18.95[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX 360 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--time-sensitive"[39m
            [36m>[39m
              [0mBackorder[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m345[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$17.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/17 - 4/25[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMicrosoft XBOX One Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--neutral"[39m
            [36m>[39m
              [0mPreparing[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$499.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m399[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m305[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$27.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/9 - 4/11[0m
          [36m</td>[39m
        [36m</tr>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSony Playstation 5 Brand New Gaming System with Four Controllers[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"signal signal--trustworthy"[39m
            [36m>[39m
              [0mRestocking[0m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$519.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m205[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<a[39m
              [33mhref[39m=[32m"https://ebay.com"[39m
            [36m>[39m
              [0m00-10542-89507[0m
            [36m</a>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m199[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0m$29.99[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mFREE[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0m4/11 - 4/15[0m
          [36m</td>[39m
        [36m</tr>[39m
      [36m</tbody>[39m
    [36m</table>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-table > renders TableWithActions 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"table"[39m
    [33mrole[39m=[32m"group"[39m
    [33mtabindex[39m=[32m"0"[39m
  [36m>[39m
    [36m<table>[39m
      [36m<thead>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSeller[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mItem[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mCondition[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mMutiple Actions[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mActions Plus[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mList Price[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mQuantity Available[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mOrders[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mWatchers[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell table-cell--numeric"[39m
          [36m>[39m
            [0mProtection[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mShipping[0m
          [36m</th>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mDelivery[0m
          [36m</th>[39m
        [36m</tr>[39m
      [36m</thead>[39m
      [36m<tbody>[39m
        [36m<tr>[39m
          [36m<th[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mNintendo[0m
          [36m</th>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [0mSwitch[0m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"select select--borderless"[39m
            [36m>[39m
              [36m<select[39m
                [33mid[39m=[32m"s0-0-18[2[0]]-1[0]-select"[39m
              [36m>[39m
                [36m<option[39m
                  [33mtext[39m=[32m"New"[39m
                [36m>[39m
                  [0mNew[0m
                [36m</option>[39m
                [36m<option[39m
                  [33mselected[39m=[32m""[39m
                  [33mtext[39m=[32m"New without box"[39m
                [36m>[39m
                  [0mNew without box[0m
                [36m</option>[39m
                [36m<option[39m
                  [33mtext[39m=[32m"Used"[39m
                [36m>[39m
                  [0mUsed[0m
                [36m</option>[39m
              [36m</select>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--12"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-chevron-down-12"[39m
                    [33mviewBox[39m=[32m"0 0 12 12"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33mclip-rule[39m=[32m"evenodd"[39m
                      [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                      [33mfill-rule[39m=[32m"evenodd"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-chevron-down-12"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</span>[39m
          [36m</td>[39m
          [36m<td[39m
            [33mclass[39m=[32m"table-cell"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"table-cell__layout"[39m
            [36m>[39m
              [36m<a[39m
                [33mclass[39m=[32m"cta-btn cta-btn--default"[39m
                [33mhref[39m=[32m"https://www.ebay.com"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"cta-btn__cell"[39m
                [36m>[39m
                  [36m<span>[39m
                    [0mEdit Listing[0m
                  [36m</span>[39m
                  [36m<svg[39m
                    [33maria-hidden[39m=[32m"true"[39m
                    [33mclass[39m=[32m"icon icon--24"[39m
                    [33mdata-marko-key[39m=[32m"@svg s0-0-18[3[0]]-2[0]-4-0"[39m
                    [33mfocusable[39m=[32m"false"[39m
                  [36m>[39m
                    [36m<defs[39m
                      [33mdata-marko-key[39m=[32m"@defs s0-0-18[3[0]]-2[0]-4-0"[39m
                    [36m>[39m
                      [36m<symbol[39m
                        [33mid[39m=[32m"icon-arrow-right-24"[39m
                        [33mviewBox[39m=[32m"0 0 24 24"[39m
                      [36m>[39m
                        [36m<path[39m
                          [33md[39m=[32m"m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"[39m
                        [36m/>[39m
                      [36m</symbol>[39m
                    [36m</defs>[39m
                    [36m<use[39m
                      [33mhref[39m=[32m"#icon-arrow-right-24"[39m
                    [36m/>[39m
                  [36m</svg>[39m
                [36m</span>[39m
              [36m</a>[39m
              [36m<button[39m
                [33mclass[39m=[32m"icon-btn"[39m
                [33mdata-ebayui[39m=[32m""[39m
                [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0-0-18[3[0]]-3[0] false\\",\\"onkeydown\\":\\"handleKeydown s0-0-18[3[0]]-3[0] false\\",\\"onfocus\\":\\"handleFocus s0-0-18[3[0]]-3[0] false\\",\\"onblur\\":\\"handleBlur s0-0-18[3[0]]-3[0] false\\"}"[39m
         ..."
`;
